Fix activities spacing in mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -96,6 +96,10 @@ main {
   width: 50%;
 }
 
+.entry-activities > * {
+  margin: 2px 0;
+}
+
 .entry-activities-label {
   font-size: 0.9em;
 }
